# jogger

./: .gitignore  Cargo.toml  build.rs  flake.nix  old-shell.nix  style.css  style.scss
nix/: jogger.nix
src/: color.rs  interface.rs  main.rs  search_entry.rs  utils.rs  xdg_database.rs
src/plugins/: applications.rs  commands.rs  files.rs  hyprland.rs  icons.rs  math.rs  mod.rs  rink.rs  ssh.rs  web.rs
src/plugins/clipboard/: mod.rs
src/plugins/emoji/: data.rs  mod.rs  types.rs
src/plugins/unicode/: char.rs  data.rs  mod.rs  types.rs
