[package]
name = "jogger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.38"
dbus = { version = "0.9.7", features = ["futures"] }
dbus-crossroads = "0.5.2"
dbus-tokio = "0.7.6"
expanduser = "1.2.2"
fend-core = "=1.5.6"
freedesktop-desktop-entry = "0.7.5"
freedesktop-icons = "0.4.0"
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
gpui = "0.2.2" # { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gtk = { version = "0.9.4", package = "gtk4", features = ["v4_16"] }
gtk-layer-shell = { version = "0.4.0", package = "gtk4-layer-shell" }
hyprland = "0.4.0-beta.2"
itertools = "0.13.0"
libc = "0.2.176"
mediatype = "0.20.0"
nucleo-matcher = "0.3.1"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
relm4 = "0.9.1"
serde = "1.0.216"
stoppable_thread = "0.2.1"
tokio = { version = "1.42.0", features = ["time"] }
tokio-util = "0.7.13"
toml = "0.8.19"
wl-clipboard-rs = "0.9.1"
xdg = "2.5.2"
xdg-mime = { git = "https://github.com/psyvern/xdg-mime-rs.git" }

[build-dependencies]
itertools = "0.13.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.145"
